--- a/backend/config.env
+++ b/backend/config.env
@@ -2,3 +2,6 @@ NODE ENV= development
 PORT=3000
 DATABASE=mongodb+srv://employee_transfer:<PASSWORD>@cluster0.wpuwivq.mongodb.net/Employee_Transfer?retryWrites=true&w=majority
 DATABASE_PASSWORD=HVbVyR9IFSJvB3Fd
+
+JWT_SECRET=electronics-communications-engineering-sucks
+JWT_EXPIRES_IN= 90d
