--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,8 @@
   "description": "A Platform to Connect Employees from different Localities to help them for doing Transfer",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon server.js",
+    "start:prod": "NODE_ENV=production nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Akshat Gupta",
@@ -21,9 +23,13 @@
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^6.9.0",
     "helmet": "^7.0.0",
+    "html-to-text": "^5.1.1",
     "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
+    "nodemailer-mailjet-transport": "^1.0.4",
+    "pug": "^3.0.2",
     "puppeteer": "^20.8.2",
     "validator": "^13.11.0",
     "xss-clean": "^0.1.4"
