--- a/client/package.json
+++ b/client/package.json
@@ -13,15 +13,21 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.5",
+    "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~49.0.7",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-dropdown-select": "^1.0.7",
+    "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-material-menu": "^2.0.0",
+    "react-native-multiple-select": "^0.5.12",
     "react-native-phone-input": "^1.3.7",
+    "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-safe-area-context": "4.6.3"
+    "react-native-side-menu-updated": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
