--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,17 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.5",
+    "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "axios": "^1.5.0",
+    "dot-env": "^0.0.1",
     "expo": "~49.0.7",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-cookies": "^3.3.0",
     "react-native-dropdown-select": "^1.0.7",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-material-menu": "^2.0.0",
@@ -27,12 +31,14 @@
     "react-native-phone-input": "^1.3.7",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-side-menu-updated": "^1.3.2"
+    "react-native-side-menu-updated": "^1.3.2",
+    "react-native-toast-message": "^2.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
     "@types/react-native": "^0.72.2",
+    "react-native-dotenv": "^3.4.9",
     "typescript": "^5.1.3"
   },
   "private": true
