--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.3",
-    "@mui/material": "^5.14.5",
+    "@mui/material": "^5.14.11",
     "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
@@ -21,6 +22,7 @@
     "dot-env": "^0.0.1",
     "expo": "~49.0.7",
     "expo-status-bar": "~1.6.0",
+    "mui-tel-input": "^4.0.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-cookies": "^3.3.0",
@@ -28,11 +30,13 @@
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-material-menu": "^2.0.0",
     "react-native-multiple-select": "^0.5.12",
+    "react-native-paper": "^5.10.6",
     "react-native-phone-input": "^1.3.7",
-    "react-native-safe-area-context": "4.6.3",
+    "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-side-menu-updated": "^1.3.2",
-    "react-native-toast-message": "^2.1.6"
+    "react-native-toast-message": "^2.1.6",
+    "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
