--- a/client/package.json
+++ b/client/package.json
@@ -21,17 +21,22 @@
     "axios": "^1.5.0",
     "dot-env": "^0.0.1",
     "expo": "~49.0.7",
+    "expo-image-picker": "^14.5.0",
     "expo-status-bar": "~1.6.0",
     "mui-tel-input": "^4.0.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-animated-bottom-drawer": "^0.0.23",
     "react-native-cookies": "^3.3.0",
+    "react-native-drawer-layout": "^4.0.0-alpha.1",
     "react-native-dropdown-select": "^1.0.7",
     "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-material-menu": "^2.0.0",
     "react-native-multiple-select": "^0.5.12",
     "react-native-paper": "^5.10.6",
     "react-native-phone-input": "^1.3.7",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-side-menu-updated": "^1.3.2",
