--- a/client/package.json
+++ b/client/package.json
@@ -14,18 +14,19 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.11",
-    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "android": "^0.0.8",
     "axios": "^1.5.0",
     "dot-env": "^0.0.1",
     "expo": "~49.0.7",
-    "expo-image-picker": "^14.5.0",
+    "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
     "mui-tel-input": "^4.0.0",
     "react": "18.2.0",
-    "react-native": "0.72.3",
+    "react-native": "0.72.5",
     "react-native-animated-bottom-drawer": "^0.0.23",
     "react-native-cookies": "^3.3.0",
     "react-native-drawer-layout": "^4.0.0-alpha.1",
@@ -45,7 +46,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.0.14",
+    "@types/react": "~18.2.14",
     "@types/react-native": "^0.72.2",
     "react-native-dotenv": "^3.4.9",
     "typescript": "^5.1.3"
