--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-native-drawer-layout": "^4.0.0-alpha.1",
     "react-native-dropdown-select": "^1.0.7",
     "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-material-menu": "^2.0.0",
     "react-native-multiple-select": "^0.5.12",
@@ -39,6 +40,7 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-sectioned-multi-select": "^0.10.0",
     "react-native-side-menu-updated": "^1.3.2",
     "react-native-toast-message": "^2.1.6",
     "react-native-vector-icons": "^10.0.0"
